--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li>1914: ???</li>
         <li>1915: Doetinchem <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/4" target="_blank">(not yet available)</a></li>
         <li>1916: Breda <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/8" target="_blank">(not yet available)</a></li>
-        <li>1917: Meppel <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/5" target="_blank">(not yet available)</a></li>
+        <li><a href="#meppel-1917">1917: Meppel</a></li>
         <li><a href="#s_hertogenbosch-1918">1918: 's Hertogenbosch</a></li>
         <li><a href="#nijmegen-1919">1919: Nijmegen</a></li>
         <li>1920: Ter Apel <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/9" target="_blank">(not yet available)</a></li>
@@ -40,6 +40,8 @@
         <li>1923: Roden <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/12" target="_blank">(not yet available)</a></li>
         <li>1924: Eisden <a href="https://github.com/larsgw/nederlands-kruidkundig-archief/issues/13" target="_blank">(not yet available)</a></li>
       </ul>
+
+      <a href="view.html?zeeuws_vlaanderen-1909&amp;tilburg-1910&amp;raamsdonksveer-1911&amp;oostburg-1913&amp;meppel-1917&amp;s_hertogenbosch-1918&amp;nijmegen-1919">Map</a>
 
       <section id="zeeuws_vlaanderen-1909">
         <h3>1909: Oostelijk Zeeuws Vlaanderen</h3>
@@ -959,6 +961,217 @@
         </details>
 
         <p>For the plants with locations: <a href="view.html?oostburg-1913&amp;oostburg-1913-routes&amp;center=[51.32,3.55]&amp;zoom=12">Map</a> &amp; <a href="data/oostburg-1913.json">data</a></p>
+      </section>
+
+      <section id="meppel-1917">
+        <h3>1917: Meppel</h3>
+
+        <blockquote>Vuyck, L. (1917). Verslag der Excursie, gehouden te Meppel op 28 Juli 1917 en volgende dagen. <i>Nederlandsch kruidkundig archief. Serie 3, 27</i>, 32&ndash;40. <a href="https://www.biodiversitylibrary.org/page/34311048">Full text</a></blockquote>
+
+        <p>Series of excursions around Meppel between the 28th to 31st of July, 1917, attended by Brand, Henrard, Jansen, Kloos, Schuyt, and Vuyck.</p>
+
+        <ul>
+          <li>July 28th 1917, evening: Meppel - Drentsche Hoofdvaart - Paradijs Schutsluis - Meppel</li>
+          <li>July 29th 1917: Meppel - Leendert - De Kolk - Kolderveen - Zwollingerveen - Zuidveen - Steenwijk</li>
+          <li>July 30th 1917: Meppel - De Stouwe - Lankhorst - Station Staphorst - Koolhaar - IJhorst - 't Ende - De Stapel</li>
+          <li>July 31st 1917: Havelte - Eursinge - Havelterberg - Holtinge - Uffelter esch - Drentsche Hoofdvaart - Havelte</li>
+          <li>July 31st 1917, evening: Meppel - Wolddijk - Korenmolen - Buitenhuizen - De Hof - Runtbrug - Hoogeveensche vaart - Meppel</li>
+        </ul>
+
+        <details>
+          <ul>
+            <li><i>Achillea Millefolium</i>: z.a.</li>
+            <li><i>A. Ptarmica</i>: a.</li>
+            <li><i>Acorus</i>: v.a.</li>
+            <li><i>Aegopodium</i>: a.</li>
+            <li><i>Agrostis alba</i></li>
+            <li><i>Agrostis vulgaris</i>: a.</li>
+            <li><i>Aira flexuosa</i>: algemeen in droge bosschen</li>
+            <li><i>Alchemilla vulgaris</i>: algemeen langs de Reest</li>
+            <li><i>Alisma Plantago</i>: z.a.</li>
+            <li><i>Alnus glutinosa</i>: z.a.</li>
+            <li><i>Angelica</i>: z.a.</li>
+            <li><i>Anthoxanthum odoratum</i>: z.a.</li>
+            <li><i>Anthriscus silv.</i>: z.a.</li>
+            <li><i>Apera</i>: a.</li>
+            <li><i>Arnoseris</i>: a. op zandgronden</li>
+            <li><i>Athyrium filix femina</i>: a.</li>
+            <li><i>Atriplex latifolia</i>: v.a.</li>
+            <li><i>Avena praecox</i>: a.</li>
+            <li><i>Bellis</i>: z.a.</li>
+            <li><i>Berula verrucosa</i>: a.</li>
+            <li><i>Bidens cernuus</i>: v.a.</li>
+            <li><i>Bidens tripartitus</i>: a.</li>
+            <li><i>Bromus mollis</i>: z.a.</li>
+            <li><i>Calamagrostis lanceolata</i>: a.</li>
+            <li><i>Calluna</i>: z.a.</li>
+            <li><i>Cardamine pratense</i>: a.</li>
+            <li><i>Carex Pseudocyperus</i>: v.a.</li>
+            <li><i>Carex vulgaris</i>: v.a.</li>
+            <li><i>Centaurea jacea</i>: v.a.</li>
+            <li><i>Cerastium triviale</i>: z.a.</li>
+            <li><i>Chenopodium album</i>: z.a.</li>
+            <li><i>Cicuta</i>: a</li>
+            <li><i>Cirsium arvense</i>: z.a.</li>
+            <li><i>Cirsium lanceolatum</i>: a.</li>
+            <li><i>Cirsium palustre</i>: z.a.</li>
+            <li><i>Comarum</i>: a.</li>
+            <li><i>Convolvulus sepium</i>: z.a.</li>
+            <li><i>Corydalis claviculata</i>: v.a.</li>
+            <li><i>Corynephorus</i>: a.</li>
+            <li><i>Cynosurus</i>: a.</li>
+            <li><i>Dactylis</i>: z.a.</li>
+            <li><i>Drosera intermedia</i>: v.a.</li>
+            <li><i>Drosera rotundifolia</i>: v.a.</li>
+            <li><i>Elodea</i>: a.</li>
+            <li><i>Epilobium angustifolium</i>: a.</li>
+            <li><i>Epilobium palustre</i>: v.a.</li>
+            <li><i>Equisetum arvense</i>: a.</li>
+            <li><i>Equisetum limosum</i>: z.a.</li>
+            <li><i>Erica</i>: z.a.</li>
+            <li><i>Eriophorum polystachyum</i>: a.</li>
+            <li><i>Euphrasia officinalis</i>: z.a.</li>
+            <li><i>Festuca elatior</i>: z.a.</li>
+            <li><i>Festuca ovina</i>: a.</li>
+            <li><i>Galeopsis Tetrahit</i>: z.a.</li>
+            <li><i>Galium Mollugo</i>: z.a.</li>
+            <li><i>Genista anglica</i>: v.a.</li>
+            <li><i>Genista pilosa</i>: v.a.</li>
+            <li><i>Glechoma</i>: z.a.</li>
+            <li><i>Glyceria fluitans</i>: a.</li>
+            <li><i>Glyceria spectabilis</i>: z.a.</li>
+            <li><i>Gnaphalium uliginosum</i>: a.</li>
+            <li><i>Heracleum</i>: z.a.</li>
+            <li><i>Hieracium Pilosella</i>: z.a.</li>
+            <li><i>Hieracium tridentatum</i>: v.a.</li>
+            <li><i>Hieracium umbellatum</i>: v.a.</li>
+            <li><i>Holcus lanatus</i>: z.a.</li>
+            <li><i>Holcus mollis</i>: a.</li>
+            <li><i>Hottonia</i>: v.a.</li>
+            <li><i>Humulus</i>: a.</li>
+            <li><i>Hydrocharis</i>: z.a.</li>
+            <li><i>Hydrocotyle</i>: a.</li>
+            <li><i>Iris</i>: z.a.</li>
+            <li><i>Jasione</i>: v.a.</li>
+            <li><i>Juncus bufonius</i>: a.</li>
+            <li><i>Juncus conglomeratus</i>: v.a.</li>
+            <li><i>Juncus effusus</i>: z.a.</li>
+            <li><i>Juncus lamprocarpus</i>: v.a.</li>
+            <li><i>Juncus obtusiflorus</i>: v.a.</li>
+            <li><i>Lamium album</i>: a.</li>
+            <li><i>Lemna minor</i>: z.a.</li>
+            <li><i>Lemna trisulca</i>: v.a.</li>
+            <li><i>Leontodon autumnalis</i>: z.a.</li>
+            <li><i>Limnanthemum</i>: v.a.</li>
+            <li><i>Linaria vulgaris</i>: z.a.</li>
+            <li><i>Lolium perenne</i>: z.a.</li>
+            <li><i>Lonicera</i>: a.</li>
+            <li><i>Lotus corniculatus</i>: v.a.</li>
+            <li><i>Lotus uliginosus</i>: a.</li>
+            <li><i>Lychnis diruna</i>: a.</li>
+            <li><i>Lychnis Flos cuculi</i>: a.</li>
+            <li><i>Lycopus</i>: a.</li>
+            <li><i>Lysimachia Nummularia</i>: z.a.</li>
+            <li><i>Lysimachia thyrsiflora</i>: v.a.</li>
+            <li><i>Lysimachia vulgaris</i>: z.a.</li>
+            <li><i>Lythrum</i>: z.a.</li>
+            <li><i>Mentha aquatica</i>: a.</li>
+            <li><i>Mentha arvensis</i>: z.a.</li>
+            <li><i>Molinia</i>: z.a., ook de vorm littoralis</li>
+            <li><i>Myosotis palustris</i>: z.a.</li>
+            <li><i>Myrica</i>: a.</li>
+            <li><i>Nardus</i>: z.a.</li>
+            <li><i>Nasturtium amphibium</i>: z.a.</li>
+            <li><i>Nuphar</i>: z.a.</li>
+            <li><i>Nymphaea</i>: a.</li>
+            <li><i>Oenanthe Phellandrium</i>: a.</li>
+            <li><i>Ornithopus</i>: v.a.</li>
+            <li><i>Panicum Crus Galli</i>: a.</li>
+            <li><i>Papaver dubium</i>: z.a.</li>
+            <li><i>Phalaris</i>: z.a.</li>
+            <li><i>Phleum pratense</i>: z.a.</li>
+            <li><i>Phragmites</i>: z.a.</li>
+            <li><i>Pinus</i>: hier en daar als opslag</li>
+            <li><i>Plantago maior</i>: z.a.</li>
+            <li><i>Plantago lanceolata</i>: z.a.</li>
+            <li><i>Poa annua</i>: z.a.</li>
+            <li><i>Poa pratensis</i>: a.</li>
+            <li><i>Polygonum amphibium</i>: z.a.</li>
+            <li><i>Polygonum aviculare</i>: z.a.</li>
+            <li><i>Polygonum Convolvulus</i>: z.a.</li>
+            <li><i>Polygonum Hydropiper</i>: a.</li>
+            <li><i>Polygonum lapathifolium</i>: z.a.</li>
+            <li><i>Polygonum mite</i>: a.</li>
+            <li><i>Polygonum Persicaria</i>: z.a.</li>
+            <li><i>Polystichum spinulosum</i>: z.a.</li>
+            <li><i>Potamogeton lucens</i>: a.</li>
+            <li><i>Potamogeton natans</i>: a.</li>
+            <li><i>Potamogeton perfoliatus</i>: a.</li>
+            <li><i>Potentilla anserina</i>: z.a.</li>
+            <li><i>Potentilla Tormentilla</i>: z.a.</li>
+            <li><i>Prunella</i>: z.a.</li>
+            <li><i>Quercus Robur</i>: aangeplant en verwilderd</li>
+            <li><i>Ranunculus acer</i>: z.a.</li>
+            <li><i>Ranunculus Flammula</i>: z.a.</li>
+            <li><i>Ranunculus Lingua</i>: a.</li>
+            <li><i>Ranunculus repens</i>: z.a.</li>
+            <li><i>Rhamnus Frangula</i>: z.a.</li>
+            <li><i>Rhinanthus maior</i>: z.a.</li>
+            <li><i>Rosa canina</i>: z.a.</li>
+            <li><i>Rubus gratus</i>: a.</li>
+            <li><i>Rumex acetosa</i>: z.a.</li>
+            <li><i>Rumex acetosella</i>: z.a.</li>
+            <li><i>Rumex crispus</i>: a.</li>
+            <li><i>Rumex Hydrolapathum</i>: z.a.</li>
+            <li><i>Rumex obtusifolius</i>: z.a.</li>
+            <li><i>Sagina procumbens</i>: a.</li>
+            <li><i>Sagittaria</i>: z.a.</li>
+            <li><i>Salix aurita</i>: z.a.</li>
+            <li><i>Salix cinerea</i>: z.a.</li>
+            <li><i>Salix repens</i>: v.a.</li>
+            <li><i>Sanguisorba officinalis</i>: a.</li>
+            <li><i>Sarothamnus</i>: v.a.</li>
+            <li><i>Scirpus lacustris</i>: v.a.</li>
+            <li><i>Scleranthus annuus</i>: a.</li>
+            <li><i>Scutellaria galericulata</i>: v.a.</li>
+            <li><i>Senecio aquaticus</i>: z.a.</li>
+            <li><i>Senecio silvaticus</i>: a.</li>
+            <li><i>Senecio vulgaris</i>: a.</li>
+            <li><i>Sisymbrium officinale</i>: z.a.</li>
+            <li><i>Sium</i>: z.a.</li>
+            <li><i>Solanum Dulcamara</i>: a.</li>
+            <li><i>Solanum nigrum</i>: v.a.</li>
+            <li><i>Sorbus</i>: z.a.</li>
+            <li><i>Sparganium ramosum</i>: z.a.</li>
+            <li><i>Sparganium simplex</i>: a. (ook de forma fluitans)</li>
+            <li><i>Spergula arvensis</i>: a.</li>
+            <li><i>Spiraea</i>: z.a.</li>
+            <li><i>Stachys palustris</i>: a.</li>
+            <li><i>Stellaria graminea</i>: a.</li>
+            <li><i>Stellaria media</i>: z.a.</li>
+            <li><i>Stratiotes</i>: z.a.</li>
+            <li><i>Succisa</i>: z.a.</li>
+            <li><i>Tanacetum</i>: a.</li>
+            <li><i>Taraxacum</i>: z.a.</li>
+            <li><i>Thysselinum</i>: z.a.</li>
+            <li><i>Trifolium minus</i>: z.a.</li>
+            <li><i>Trifolium pratensis</i>: z.a.</li>
+            <li><i>Trifolium repens</i>: z.a.</li>
+            <li><i>Triodea</i>: a.</li>
+            <li><i>Triticum repens</i>: z.a.</li>
+            <li><i>Typha angustifolia</i>: v.a.</li>
+            <li><i>Urtica dioica</i>: z.a.</li>
+            <li><i>Urtica urens</i>: a.</li>
+            <li><i>Valeriana officinalis</i>: z.a.</li>
+            <li><i>Veronica Chamaedrys</i>: a.</li>
+            <li><i>Vicia Cracca</i>: z.a.</li>
+            <li><i>Viola canina</i>: v.a.</li>
+            <li><i>Viola palustris</i>: a.</li>
+            <li><i>Viola tricolor</i>: z.a.</li>
+          </ul>
+        </details>
+
+        <p>For the plants with locations: <a href="view.html?meppel-1917&amp;meppel-1917-routes&amp;center=[52.73,6.2]&amp;zoom=12">Map</a> &amp; <a href="data/meppel-1917.json">data</a></p>
       </section>
 
       <section id="s_hertogenbosch-1918">
